# yarp-devices-azure-openai

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml
src/devices/: CMakeLists.txt
src/devices/deviceTemplate/: CMakeLists.txt  DeviceTemplate.cpp  DeviceTemplate.h  DeviceTemplate_ParamsParser.cpp  DeviceTemplate_ParamsParser.h  DeviceTemplate_params.md
src/devices/ttsDevice/: CMakeLists.txt  TtsDevice.cpp  TtsDevice.h  TtsDevice_ParamsParser.cpp  TtsDevice_ParamsParser.h  TtsDevice_params.md  dr_mp3.h
src/devices/ttsDevice/tests/: CMakeLists.txt  TtsDevice_test.cpp
src/devices/whisperDevice/: CMakeLists.txt  WhisperDevice.cpp  WhisperDevice.h  WhisperDevice_ParamsParser.cpp  WhisperDevice_ParamsParser.h  WhisperDevice_params.md
src/devices/whisperDevice/tests/: CMakeLists.txt  WhisperDevice_test.cpp
